--- a/styles/c10_main.css
+++ b/styles/c10_main.css
@@ -14,6 +14,13 @@ body {
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
+	display: grid;
+	grid-template: repeat(4, auto) / auto 1fr;
+	grid-template-areas: 
+		"head"
+		"navi"
+		"main"
+		"foot";
 }
 a:focus, a:hover {
 	font-style: italic;
@@ -30,6 +37,7 @@ header {
 	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
 	background-image: linear-gradient(
 	    30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+	grid-area: head;
 }
 header h2 {
 	font-size: 175%;
@@ -47,10 +55,16 @@ header img {
 	text-shadow: 2px 2px 2px #800000;
 }
 /* the styles for the navigation menu */
+#nav_menu {
+	grid-area: navi;
+}
 #nav_menu ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+	display: grid;
+	grid-template: auto / repeat(5, 1fr);
+	align-content: center;
 }
 #nav_menu ul li a {
     display: block;
@@ -65,9 +79,19 @@ header img {
 	color: yellow;
 }
 
+/* main styles */
+main { 
+	display: grid;
+	grid-area: main;
+	grid-template: auto / 30% auto;
+	grid-gap: 2.5%;
+}
+
 /* the styles for the section */
 section {
     padding: 0 2.5% 20px 2.5%;
+	grid-row: 1 / 2;
+	grid-column: 2 / 3;
 }
 section h1 {
 	font-size: 150%;
@@ -118,6 +142,8 @@ article img {
 /* the styles for the aside */
 aside {
     padding: 0 0 20px 2.5%;
+	grid-row: 1 / 2;
+	grid-column: 1 /2;
 }
 aside h2 {
 	color: #800000;
@@ -135,6 +161,7 @@ aside img {
 /* the styles for the footer */
 footer {
 	background-color: #931420;
+	grid-area: foot;
 }
 footer p {
 	text-align: center;
@@ -158,16 +185,35 @@ footer p {
 }
 
 @media only screen and (max-width: 648px) {
-	header img { float: none; }
-	header { text-align: center; }
+	body { 
+		grid-template: repeat(4, auto) / 1fr;
+		grid-template-areas: 
+			"head"
+			"navi"
+			"main"
+			"foot";
+	}
+	header img { float: none; 
+					justify-self: center;
+	}
+	header { text-align: center;
+			display: grid;
+			grid-template: repeat(3, auto) / 1fr;
+			grid-gap: .5em;
+			padding: 1.5em 0 1.5em 0;
+	}
+	main { 
+		grid-template: auto auto / 1fr;
+	}
 	section {
-		float: none;
-		width: 95%;
+		grid-column: 1 / 2;
+		margin: 0 2.5%;
+		padding-right: 0;
 	}
 	aside {
-		float: none;
+		padding-left: 2.5%;
 		padding-right: 2.5%;
-		width: 95%;
+		grid-row: 2 / 3;
 	}
 	article img { max-width: 30%; }
 	#speakers {
@@ -175,9 +221,11 @@ footer p {
 	}
 	#nav_menu {
 		display: none;
+
 	}
 	#mobile_menu {
 		display: block;
+		grid-area: navi;
 	}
 	.slicknav_menu {
 		background-color: #800000 !important;
